@@ -61,8 +61,9 @@
 	- http://intertwingly.net/blog/2008/11/23/RubyGems-1-3-1-on-Ubuntu-8-10
 
  - Re-generate SSL cert when renaming a domain
-	- If self-signed
+	- Command line tools for cert management
 
- - For a sub-domain, copy /etc/skel/public_html to correct dir
-
-
+ - Email addresses for forwarding spam to, for black/white listing
+	- Also updates bayes DB?
+	- FS#4947
+	- spamtrap@ and hamtrap@
