@@ -1027,3 +1027,4 @@ Added validation to the configuration check to detect MySQL or disk quota synchr
 If a script like Wordpress has been upgraded outside of Virtualmin, it's new version will be detected to prevent false warnings about needing to upgrade.
 Script update notification, quota and backup emails now contain a link to Virtualmin, using a URL configurable on the Module Config page.
 When alias virtual servers are created, files from /etc/skel are no longer copied into their home directories as they are not needed.
+When a virtual server with a self-signed SSL certificate is renamed, the certificate is re-generated to match the new domain name.
